src/services/kubernetes/per-deployment/analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: analytics
  template:
    metadata:
      labels:
        component: analytics
    spec:
      containers:
        - name: analytics
          image: ${DOCKER_USER}/servers:${BUILD_VERSION}
          command:
            ['sh', '-c', 'dotnet ./Adaptive.ReactiveTrader.Server.Analytics.dll config.prod.json']
          resources:
            requests:
              memory: "50M"
              cpu: "10m"
