src/services/kubernetes/per-deployment/blotter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blotter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: blotter
  template:
    metadata:
      labels:
        component: blotter
    spec:
      containers:
        - name: blotter
          image: ${DOCKER_USER}/servers:${BUILD_VERSION}
          command:
            ['sh', '-c', 'dotnet ./Adaptive.ReactiveTrader.Server.Blotter.dll config.prod.json']
          resources:
            requests:
              memory: "80M"
              cpu: "10m"
