src/services/kubernetes/per-deployment/bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bot
  template:
    metadata:
      labels:
        component: bot
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: nlp-key
        - name: symphony-cloud-key
          secret:
            secretName: symphony-key
      containers:
        - name: bot
          image: ${DOCKER_USER}/bot:${BUILD_VERSION}
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
            - name: symphony-cloud-key
              mountPath: /var/secrets/symphony
          resources:
            requests:
              memory: "120M"
              cpu: "15m"
