src/services/kubernetes/per-deployment/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: ${DOCKER_USER}/client:${BUILD_VERSION}
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "20M"
              cpu: "10m"
