src/services/kubernetes/per-deployment/tradeexecution-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradeexecution-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: tradeexecution
  template:
    metadata:
      labels:
        component: tradeexecution
    spec:
      containers:
        - name: tradeexecution
          image: ${DOCKER_USER}/servers:${BUILD_VERSION}
          command:
            [
              'sh',
              '-c',
              'dotnet ./Adaptive.ReactiveTrader.Server.TradeExecution.dll config.prod.json',
            ]
          resources:
            requests:
              memory: "80M"
              cpu: "5m"
