src/services/kubernetes/per-deployment/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: ${DOCKER_USER}/nginx:${BUILD_VERSION}
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "10M"
              cpu: "15m"
