src/services/kubernetes/per-deployment/broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: broker
  template:
    metadata:
      labels:
        component: broker
    spec:
      containers:
      - name: broker
        image: ${DOCKER_USER}/broker:${BUILD_VERSION}
        ports:
        - containerPort: 5672
        - containerPort: 15672
        - containerPort: 15674
        resources:
          requests:
            memory: "120M"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  type: ClusterIP
  selector:
    component: broker
  ports:
  - port: 5672
    name: tcp
    targetPort: 5672
  - port: 15672
    name: management
    targetPort: 15672
  - port: 15674
    name: ws
    targetPort: 15674
