src/services/kubernetes/per-deployment/eventstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventstore-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: eventstore
  template:
    metadata:
      labels:
        component: eventstore
    spec:
      containers:
      - name: eventstore
        image: eventstore/eventstore:release-5.0.9
        ports:
        - containerPort: 1113
        - containerPort: 2113
        resources:
          requests:
            memory: "256Mi"
            cpu: "80m"
        volumeMounts:
        - mountPath: /db
          name: eventstore-data
        livenessProbe:
          httpGet:
            path: /
            port: 2113
          initialDelaySeconds: 30
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 2113
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: eventstore-data
        persistentVolumeClaim:
          claimName: eventstore-volume
---
apiVersion: v1
kind: Service
metadata:
  name: eventstore
spec:
  type: ClusterIP
  selector:
    component: eventstore
  ports:
  - port: 1113
    targetPort: 1113
    name: 'http'
  - port: 2113
    targetPort: 2113
    name: 'tcp'
