src/services/kubernetes/per-deployment/storybook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storybook-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: storybook
  template:
    metadata:
      labels:
        component: storybook
    spec:
      containers:
      - name: storybook
        image: ${DOCKER_USER}/storybook:${BUILD_VERSION}
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "20M"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: storybook
spec:
  type: ClusterIP
  selector:
    component: storybook
  ports:
  - port: 80
    targetPort: 80
