src/services/kubernetes/per-deployment/styleguide.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: styleguide-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: styleguide
  template:
    metadata:
      labels:
        component: styleguide
    spec:
      containers:
      - name: styleguide
        image: ${DOCKER_USER}/styleguide:${BUILD_VERSION}
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "20M"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: styleguide
spec:
  type: ClusterIP
  selector:
    component: styleguide
  ports:
  - port: 80
    targetPort: 80
