src/services/kubernetes/per-deployment/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "web-backend-config"}'
spec:
  selector:
    component: web
  ports:
    - name: web
      port: 80
      targetPort: 80
  type: NodePort
