src/services/kubernetes/per-deployment/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: web
        image: nginx:1.19.6
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "10M"
            cpu: "15m"
        volumeMounts:
        - name: web-nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: web-nginx-config
        configMap:
          name: web-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "web-backend-config"}'
spec:
  selector:
    component: web
  ports:
  - name: web
    port: 80
    targetPort: 80
  type: NodePort
